--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,24 +68,25 @@
     margin-top: 20px;
 }
 
-.banner a {
-    display: block;
-    background-color: #b28756;
-    border: 3px solid #b28756;
-    color: #fff;
-    text-align: center;
-    font-size: 14px;
+.button{
+    display: inline-block;
+    background-color: #B28756;
     text-transform: uppercase;
-    font-weight: bold;
+    color:#FFF;
+    font-size:12px;
+    font-weight: 600;
     text-decoration: none;
-    padding: 10px 30px;
-    margin-top: 25px;
-    transition: all ease .2s;
-}
+    padding:10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+    border: 0;
 
-.banner a:hover {
-    background-color: #fff;
-    color: #b28756;
+}
+.button--dark {
+    background-color:#000;
+}
+.button--dark:hover {
+    background-color:#B28756;
 }
 
 
